[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/char/fredbear/61.png" type="Texture" id=2]
[ext_resource path="res://audio/char/fredbear/Fredlaugh1.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/char/fredbear/Fredlaugh2.wav" type="AudioStream" id=4]
[ext_resource path="res://objects/chars/fredbear/fredbear.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -577 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -941, -94 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 910, -94 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="fredbear" type="Node2D"]
script = ExtResource( 5 )

[node name="eyes" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -8, -577 )
texture = ExtResource( 2 )

[node name="animPlayer" type="AnimationPlayer" parent="eyes"]
anims/RESET = SubResource( 1 )
anims/left = SubResource( 2 )
anims/right = SubResource( 3 )

[node name="timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="laugh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="laugh2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="killTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="killTimer" to="." method="_on_killTimer_timeout"]
